# zoritori

./: ALTERNATIVES.md  README.md  config.ini  example-config.ini  pyproject.toml  pytest.ini
saru/: __main__.py  cli.py  clips.py  dictionary.py  drawing.py  events.py  files.py  options.py  overlay.py  saru.py  screenshots.py  strings.py  tokenizer.py  translator.py  types.py  ui.py  vocabulary.py  watcher.py  windows.py
saru/recognizers/: google_vision.py  tesseract.py
tests/: test_saru.py  test_strings.py  test_tokenizer.py  test_vocabulary.py  test_zoritori.py
zoritori/: cli.py  clips.py  dictionary.py  drawing.py  options.py  overlay.py  pipeline.py  platform.py  screenshots.py  types.py  ui.py  vocabulary.py  watcher.py  windows.py  zoritori.py
zoritori/recognizers/: google_vision.py  tesseract.py
